fix: prevent horizontal overflow accross different screen sizes

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@
 }
 body {
     height: 100dvh;
+    width: 100%;
     display: flex;
     flex-direction: column;
     overflow-x: hidden;
@@ -44,7 +45,7 @@ main {
     position: absolute;
     top: -35%;
     height: 115dvh;
-    width: 120dvw;
+    width: 100%;
     z-index: -1;
     background: linear-gradient(78deg, #029452a9, #8000ff8a, #0065a4b9);
     transform: skewY(-12deg);
@@ -64,7 +65,7 @@ main {
 .hero_image_and_title picture {
     display: block;
     width: 100%;
-    height: 90dvh;
+    height: 85dvh;
     min-width: 250px;
     min-height: 300px;
 }
